--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,8 +17,11 @@ jobs:
         with:
           node-version: '14'
 
+      - name: Install pnpm
+        run: npm install -g pnpm
+
       - name: Install dependencies
-        run: pnpm install  # 或者使用 yarn install，取决于你的项目使用的包管理器
+        run: pnpm install  
 
       - name: Run script
         run: node scripts.js
