更新 GitHub action

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,5 +24,8 @@ jobs:
       - name: Install dependencies
         run: pnpm install
 
+      - name: ls
+        run: ls
+
       - name: Run script
-        run: node ../scripts.js
+        run: node scripts.js
