--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -28,12 +28,4 @@ jobs:
         run: ls
 
       - name: Run script
-        env:
-          PSQLURL: ${{ secrets.PSQLURL}},
-          ALGOLIAAPPID: ${{ secrets.ALGOLIAAPPID }},
-          ALGOLIAAPIKEY: ${{ secrets.ALGOLIAAPIKEY }},
-          ALGOLIAINDEXNAME: ${{ secrets.ALGOLIAINDEXNAME }}
-          MY_SECRET: ${{ secrets.ALGOLIAAPPID }}
-
-        run: |
-          echo "PSQLURL: $MY_SECRET"
+        run: node script.js
