使用环境变量

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -30,4 +30,7 @@ jobs:
       - name: Run script
         env:
           PSQLURL: ${{ secrets.PSQLURL }}
+          ALGOLIAAPIKEY: ${{ secrets.ALGOLIAAPIKEY }}
+          ALGOLIAAPPID: ${{ secrets.ALGOLIAAPPID }}
+          ALGOLIAINDEXNAME: ${{ secrets.ALGOLIAINDEXNAME }}
         run: node script.js
